Fix: Styles CV Button mobile

--- a/app/[locale]/components/DownloadResume/viewReasume.module.css
+++ b/app/[locale]/components/DownloadResume/viewReasume.module.css
@@ -53,7 +53,7 @@
     background-color: rgba(1, 4, 21, 0.495);
   }
   .icon {
-    color: #ec1c24;
+    color: white;
     font-size: 1.3rem;
   }
 }
